syntax = "proto3";

package helloworld;

option java_multiple_files = true;
option java_package = "com.github.tomj0101.grpc";
option java_outer_classname = "HelloWorldProto";

enum Sentiment {
  HAPPY = 0;
  SLEEPY = 1;
  ANGRY = 2;
}

// The request message containing the user's name.
message HelloRequest {
  string name = 1;
  int32 age = 2;
  repeated string hobbies = 3;
  map<string, string> bagOfTricks = 4;
  Sentiment sentiment = 5;
}

// The response message containing the greetings
message HelloResponse {
  string message = 1;
}

// The greeting service definition.
service Greeter {
  // Sends a greeting
  rpc SayHello (HelloRequest) returns (HelloResponse) {}
}